--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -6,16 +6,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
 
-*::-webkit-scrollbar {
-    display: none;
-}
-
+html,
 body {
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden !important;
+    max-width: 100%;
 }
 
 .main-container {
